add reference to Wilson papers and course

--- a/JOSE_paper/paper.bib
+++ b/JOSE_paper/paper.bib
@@ -55,3 +55,38 @@ year = {2022}
   pages={651--656},
   year={2013}
 }
+
+@misc{wallace2022goodenough,
+  title={Good Enough Practices in Scientific Computing: A Lesson (Version 0.1.0)},
+  author={Wallace, E..W.J., Meynert, A., Zielinski. T., Romanowski. A., et. al., 
+  year={2022},
+  note={Training material}
+}
+
+@article{wilson2013best,
+  title = {Best Practices for Scientific Computing},
+  author = {Wilson, G. and Aruliah, D. A. and Brown, C.T. and Chue Hong, N.P. and Davis, M. and Guy, R.T. and Haddock, S.H.D. and Huff, K. and Mitchell, I.M. and Plumbley, M. and Waugh, B. and White, E.P. and Wilson, P.},
+  doi = {10.1371/journal.pbio.1001745},
+  journal = {PLoS Biology},
+  number = 1,
+  pages = {e1001745+},
+  publisher = {Public Library of Science},
+  url = {http://dx.doi.org/10.1371/journal.pbio.1001745},
+  volume = 12,
+  year = 2013
+}
+
+@article{wilson2017goodenough,
+  title = {Good enough practices in scientific computing},
+  author = {Wilson, G. and Bryan, J. and Cranston, K. and Kitzes, J. and Nederbragt, L. and Teal, T.K.},
+  doi = {10.1371/journal.pcbi.1005510},
+  journal = {PLOS Computational Biology},
+  number = 6,
+  pages = {e1005510+},
+  publisher = {Public Library of Science},
+  url = {http://dx.doi.org/10.1371/journal.pcbi.1005510},
+  volume = 13,
+  year = 2017
+}
+
+
