fixed bibtex file

--- a/JOSE_paper/paper.bib
+++ b/JOSE_paper/paper.bib
@@ -58,7 +58,7 @@ year = {2022}
 
 @misc{wallace2022goodenough,
   title={Good Enough Practices in Scientific Computing: A Lesson (Version 0.1.0)},
-  author={Wallace, E..W.J., Meynert, A., Zielinski. T., Romanowski. A., et. al., 
+  author={Wallace, E..W.J., Meynert, A., Zielinski. T., Romanowski. A., et. al.}, 
   year={2022},
   note={Training material}
 }
