--- a/JOSE_paper/paper.bib
+++ b/JOSE_paper/paper.bib
@@ -1,10 +1,10 @@
 @article{barba2022teaching,
-  author = "Lorena A. Barba and Lecia J. Barker and Douglas S. Blank and Jed Brown and Allen Downey and Timothy George and Lindsey J. Heagy and Kyle Mandli and Jason K. Moore and David Lippert and Kyle Niemeyer and Ryan Watkins and Richard West and Elizabeth Wickes and Carol Willling and Michael Zingale",
-  title = "{Teaching and Learning with {Jupyter}}",
-  year = "2022",
-  month = "4",
-  url = "https://figshare.com/articles/online_resource/Teaching_and_Learning_with_Jupyter/19608801",
-  doi = "10.6084/m9.figshare.19608801.v1"
+  author = {Lorena A. Barba and Lecia J. Barker and Douglas S. Blank and Jed Brown and Allen Downey and Timothy George and Lindsey J. Heagy and Kyle Mandli and Jason K. Moore and David Lippert and Kyle Niemeyer and Ryan Watkins and Richard West and Elizabeth Wickes and Carol Willling and Michael Zingale},
+  title = {{Teaching and Learning with {Jupyter}}},
+  year = {2022},
+  month = {4},
+  url = {https://figshare.com/articles/online_resource/Teaching_and_Learning_with_Jupyter/19608801},
+  doi = {10.6084/m9.figshare.19608801.v1}
 }
 
 @article{barker2022introducing,
@@ -38,6 +38,13 @@ title = {{Black: The uncompromising Python code formatter}},
 url = {https://github.com/psf/black}
 }
 
+@software{Pylint_contributors_Pylint,
+author = {{Pylint contributors}},
+license = {GPL-2.0},
+title = {{Pylint}},
+url = {https://github.com/pylint-dev/pylint}
+}
+
 @software{Allaire_Quarto_2022,
 author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
 doi = {10.5281/zenodo.5960048},
@@ -53,14 +60,16 @@ year = {2022}
   author={Rubin, Marc J},
   booktitle={Proceeding of the 44th ACM technical symposium on Computer science education},
   pages={651--656},
-  year={2013}
+  year={2013},
+  doi = {10.1145/2445196.2445388}
 }
 
 @misc{wallace2022goodenough,
   title={Good Enough Practices in Scientific Computing: A Lesson (Version 0.1.0)},
   author={Wallace, E..W.J., Meynert, A., Zielinski. T., Romanowski. A., et. al.}, 
   year={2022},
-  note={Training material}
+  note={Training material},
+  doi={10.5281/zenodo.10783026}
 }
 
 @article{wilson2013best,
