--- a/slides/rse-skills.qmd
+++ b/slides/rse-skills.qmd
@@ -114,7 +114,7 @@ My background in this is domain science and numerical modelling on HPC.
 
 <!-- ------------------------------------------------------------------------------ -->
 
-{{< include _formatting_with_black.qmd >}}
+{{< include _formatting.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
 
@@ -122,7 +122,7 @@ My background in this is domain science and numerical modelling on HPC.
 
 <!-- ------------------------------------------------------------------------------ -->
 
-{{< include _formatting_with_pylint.qmd >}}
+{{< include _linting.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
 
