--- a/slides/references.bib
+++ b/slides/references.bib
@@ -22,6 +22,16 @@
   note = {Accessed: 2024-01-19}
 }
 
+@misc{ruff,
+  author={Astral},
+  title = {{Ruff: An extremely fast Python linter and code formatter, written in Rust.}},
+  howpublished = {\url{https://github.com/astral-sh/ruff}},
+  year={2025},
+  url = {(https://docs.astral.sh/ruff/},
+  version = {0.11.3},
+  note = {Accessed: 2025-04-04}
+}
+
 @misc{black,
   author={Langa, Ł},
   title = {{Black: The uncompromising Python code formatter}},
