--- a/slides/_linting.qmd
+++ b/slides/_linting.qmd
@@ -1,4 +1,7 @@
-## PEP8 & Formatting - PyLint {.smaller}
+<!-- ------------------------------------------------------------------------------ -->
+
+
+## PEP8 & Beyond {.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
@@ -11,34 +14,22 @@ Static Analysis
 ::: {.column width="50%"}
 There are various tools available:
 
-- pycodestyle
-- flake8
-- Pylint
 - ruff
+- Pylint
+- flake8
+- pycodestyle
 :::
 ::::
 
-::: {.panel-tabset}
+\
 
-### Linux/macOS
+We will be using `ruff check` for static analysis, which we already installed as part
+of `ruff` in a previous exercise.
 
-```bash
-(myvenv) $ pip install pylint
-(myvenv) $ pylint myfile.py
-(myvenv) $ pylint mydirectory/
-```
-
-### Windows
-
-```powershell
-(myvenv) PS> pip install pylint
-(myvenv) PS> pylint myfile.py
-(myvenv) PS> pylint mydirectory/
-```
-:::
+<!-- ------------------------------------------------------------------------------ -->
 
 
-## PEP8 & Formatting - PyLint - Example {.smaller}
+## Code Quality - `ruff check` {.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
@@ -71,23 +62,60 @@ def long_func(
 ```
 :::
 ::: {.column style="font-size: 75%;"}
-```bash
-(myvenv) $ pylint long_func.py
-************* Module long_func
-long_func.py:1:0: C0116: Missing function or method docstring (missing-function-docstring)
-long_func.py:1:0: W0102: Dangerous default value [] as argument (dangerous-default-value)
-long_func.py:1:0: R0913: Too many arguments (7/5) (too-many-arguments)
-long_func.py:24:4: E0602: Undefined variable 'param_2' (undefined-variable)
-long_func.py:25:11: E0602: Undefined variable 'param_2' (undefined-variable)
-long_func.py:4:4: W0613: Unused argument 'param_two' (unused-argument)
-long_func.py:5:4: W0613: Unused argument 'param_three' (unused-argument)
+:::
+::::
 
-------------------------------------------------------------------
-Your code has been rated at 0.00/10
+
+## Code Quality - `ruff check` {.smaller}
+
+:::: {.columns}
+::: {.column width="50%"}
+```python
+def long_func(
+    x,
+    param_one,
+    param_two=[],
+    param_three=24,
+    param_four=None,
+    param_five="Empty Report",
+    param_six=123456,
+):
+    val = 12 * 16 + (24) - 10 * param_one + param_six
+
+    if x > 5:
+        print("x is greater than 5")
+
+    else:
+        print("x is less than or equal to 5")
+
+    if param_four:
+        print(param_five)
+
+    print("You have called long_func.")
+    print("This function has several params.")
+
+    param_2.append(x * val)
+    return param_2
+```
+:::
+::: {.column style="font-size: 75%;"}
+```default
+(myvenv) $ ruff check long_func.py
+long_func.py:1:1: D100 Missing docstring in public module
+long_func.py:1:5: PLR0913 Too many arguments in function definition (7 > 5)
+long_func.py:1:5: D103 Missing docstring in public function
+long_func.py:4:5: ARG001 Unused function argument: `param_two`
+long_func.py:4:15: B006 Do not use mutable data structures for argument defaults
+long_func.py:5:5: ARG001 Unused function argument: `param_three`
+long_func.py:12:12: PLR2004 Magic value used in comparison, consider replacing `5` with a constant variable
+long_func.py:24:5: F821 Undefined name `param_2`
+long_func.py:25:12: F821 Undefined name `param_2`
+Found 9 errors.
 
 (myvenv) $
 
 ```
+Note: use the <br> `--output-format=concise` <br> flag for this shortened output.
 :::
 ::::
 
@@ -97,7 +125,8 @@ Caught unused variable param_three\
 0.0 rating because this is unrunnable!
 :::
 
-## PEP8 & Formatting - PyLint - Example {.smaller}
+
+## Code Quality - `ruff check` {.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
@@ -129,62 +158,102 @@ def long_func(
 ```
 :::
 ::: {.column style="font-size: 75%;"}
-```bash
-(myvenv) $ pylint long_func.py
-************* Module long_func
-long_func.py:1:0: C0114: Missing module docstring (missing-module-docstring)
-long_func.py:1:0: C0116: Missing function or method docstring (missing-function-docstring)
-long_func.py:1:0: W0102: Dangerous default value [] as argument (dangerous-default-value)
-long_func.py:1:0: R0913: Too many arguments (6/5) (too-many-arguments)
-
-------------------------------------------------------------------
-Your code has been rated at 6.36/10 (previous run: 0.00/10, +6.36)
+```default
+(myvenv) $ ruff check long_func.py
+long_func.py:1:1: D100 Missing docstring in public module
+long_func.py:1:5: PLR0913 Too many arguments in function definition (6 > 5)
+long_func.py:1:5: D103 Missing docstring in public function
+long_func.py:4:15: B006 Do not use mutable data structures for argument defaults
+long_func.py:11:12: PLR2004 Magic value used in comparison, consider replacing `5` with a constant variable
+Found 5 errors.
 
 (myvenv) $
 
 ```
 \
-Search the error code to understand the issue:
-
-- [docs for W0102](https://pylint.pycqa.org/en/latest/user_guide/messages/warning/dangerous-default-value.html)
+Use `ruff rule` to understand different rules:
+```
+ruff rule B006
+```
+will display the [docs for B006](https://docs.astral.sh/ruff/rules/mutable-argument-default/)
 
 :::
 ::::
 
 ::: {.notes}
 We now have runnable code!\
-Get a rating.
 :::
+
+
+<!-- ------------------------------------------------------------------------------ -->
 
 
 ## IDE Integration {.smaller}
 
-- Catch issues before running PyLint
+- Catch issues before running ruff
 - Gradually coerces you to become a better programmer
-- Available on all good text editors and emacs:
-  - [Vim](https://www.vimfromscratch.com/articles/vim-for-python)
-  - [pycharm](https://www.jetbrains.com/pycharm/)
-  - [Sublime](https://packagecontrol.io/packages/SublimeLinter-pylint)
-  - [VSCode](https://code.visualstudio.com/docs/python/linting)
-  - [emacs](https://www.emacswiki.org/emacs/PythonProgrammingInEmacs)
+- See [ruff editor integration docs](https://docs.astral.sh/ruff/editors/setup/) for
+  instructions on setup for:
+  - Vim
+  - pycharm
+  - Sublime
+  - VS Code
+  - Emacs
+
+
+<!-- ------------------------------------------------------------------------------ -->
+
+
+## Other languages {.smaller}
+
+Similar tools for linting and static analysis exist for other languages:
+
+- C and C++ - [clang-tidy](https://clang.llvm.org/extra/clang-tidy/) and
+  [cppcheck](https://cpp-linter.github.io/)
+- Fortran - [fortitude](https://github.com/PlasmaFAIR/fortitude)
+- Rust - [clippy](https://doc.rust-lang.org/clippy/)
+- R - [lintr](https://lintr.r-lib.org/)
+
+More generally see [this list of static analysis tools](https://github.com/analysis-tools-dev/static-analysis).
+
+
+<!-- ------------------------------------------------------------------------------ -->
+
+
+## Configuration {.smaller}
+
+The default set of linting rules for ruff is quite simple.
+
+The ruleset to be applied can be configured in a `ruff.toml` file, as we do in this project,
+or `pyproject.toml` for packaged code.
+For full details see the [ruff configuration documentation](https://docs.astral.sh/ruff/configuration/).
+
+Details of the different rules and rulesets that can be selected can be found in the
+[ruff rules documentation](https://docs.astral.sh/ruff/rules/).
+
+
+<!-- ------------------------------------------------------------------------------ -->
 
 
 ## Exercise 4 {.smaller}
 
 Go to exercise 4 and:
 
-- install pylint
-- run pylint on `precipitation_climatology.py`
+- run `ruff check` on `precipitation_climatology.py`
 - examine the report and try and address some of the issues.
-  - Ignore missing docstrings and f-strings for now - we'll come to them later.
-  - Try and deal with: `W0611` Unused imports, `C0412` Ungrouped imports, `W0102` Dangerous default
-  - If you feel like it you could try and fix: `W0621` Redefining name, `W1514` Unexplicit open
-  - Unless you are really keen don't worry about: `R0913` Too many arguments, `C0103` Unconforming naming style.
+  - Try and deal with: `F401` unused imports, `I001` unsorted imports,
+    `B006` dangerous default, and `D202` Blank lines
+  - If you feel like it you could try and fix: `B904` try exceptions
+  - Ignore `D100`/`D103` missing docstrings and `PLR2004` magic values for now - we'll
+    come to them later.
+  - Unless you are really keen don't worry about: `PLR0913` Too many arguments
 
 Extensions:
 
 - try and add linting to your preferred text editor or IDE
-- explore the option to supress pylint warnings
-- explore the configuration options for pylint
+- explore the configuration options for ruff
+- explore the option to supress ruff warnings
+- explore autofixes using the `--fix` flag
+- explore rules in development using the `--preview` flag
 
-
+<!-- ------------------------------------------------------------------------------ -->
