Update paper to refer to ruff instead of black and pylint.

--- a/JOSE_paper/paper.bib
+++ b/JOSE_paper/paper.bib
@@ -31,18 +31,15 @@
   journal = {Journal of Open Source Education}
 } 
 
-@software{LangaBlack,
-author = {Langa, Łukasz and {contributors to Black}},
-license = {MIT},
-title = {{Black: The uncompromising Python code formatter}},
-url = {https://github.com/psf/black}
-}
-
-@software{Pylint_contributors_Pylint,
-author = {{Pylint contributors}},
-license = {GPL-2.0},
-title = {{Pylint}},
-url = {https://github.com/pylint-dev/pylint}
+@software{ruff,
+  author={Astral},
+  title = {{Ruff: An extremely fast Python linter and code formatter, written in Rust.}},
+  howpublished = {\url{https://github.com/astral-sh/ruff}},
+  year={2025},
+  url = {(https://docs.astral.sh/ruff/},
+  version = {0.11.3},
+  license = {MIT},
+  note = {Accessed: 2025-04-04}
 }
 
 @software{Allaire_Quarto_2022,
