Update ruff config to simplify teaching linting in the early course, and slides to reflect this.

--- a/slides/_linting.qmd
+++ b/slides/_linting.qmd
@@ -1,15 +1,20 @@
 <!-- ------------------------------------------------------------------------------ -->
+# Static Analysis
+<!-- ------------------------------------------------------------------------------ -->
 
 
-## PEP8 & Beyond {.smaller}
+## Static Analysis {.smaller}
 
 :::: {.columns}
 ::: {.column width="50%"}
-Static Analysis
+Beyond PEP8:
 
-- Check the code without running it
-- Catch issues before you run any code
-- Improve code quality^[beyond simply formatting and readability]
+- Improve code quality
+- Learn better practices
+
+Save time and resource:
+
+- Check code for issues without running
 :::
 ::: {.column width="50%"}
 There are various tools available:
@@ -100,29 +105,25 @@ def long_func(
 :::
 ::: {.column style="font-size: 75%;"}
 ```default
-(myvenv) $ ruff check long_func.py
-long_func.py:1:1: D100 Missing docstring in public module
-long_func.py:1:5: PLR0913 Too many arguments in function definition (7 > 5)
-long_func.py:1:5: D103 Missing docstring in public function
+(rse-venv) $ ruff check long_func.py
 long_func.py:4:5: ARG001 Unused function argument: `param_two`
 long_func.py:4:15: B006 Do not use mutable data structures for argument defaults
 long_func.py:5:5: ARG001 Unused function argument: `param_three`
-long_func.py:12:12: PLR2004 Magic value used in comparison, consider replacing `5` with a constant variable
 long_func.py:24:5: F821 Undefined name `param_2`
 long_func.py:25:12: F821 Undefined name `param_2`
-Found 9 errors.
+Found 5 errors.
 
-(myvenv) $
+(rse-venv) $
 
 ```
-Note: use the <br> `--output-format=concise` <br> flag for this shortened output.
+Note: \
+use the `--output-format=concise` <br> flag for this shortened output.
 :::
 ::::
 
 ::: {.notes}
 Caught a bug - param2\
-Caught unused variable param_three\
-0.0 rating because this is unrunnable!
+Caught unused variable param_three
 :::
 
 
@@ -159,15 +160,11 @@ def long_func(
 :::
 ::: {.column style="font-size: 75%;"}
 ```default
-(myvenv) $ ruff check long_func.py
-long_func.py:1:1: D100 Missing docstring in public module
-long_func.py:1:5: PLR0913 Too many arguments in function definition (6 > 5)
-long_func.py:1:5: D103 Missing docstring in public function
+(rse-venv) $ ruff check long_func.py
 long_func.py:4:15: B006 Do not use mutable data structures for argument defaults
-long_func.py:11:12: PLR2004 Magic value used in comparison, consider replacing `5` with a constant variable
-Found 5 errors.
+Found 1 errors.
 
-(myvenv) $
+(rse-venv) $
 
 ```
 \
@@ -220,40 +217,44 @@ More generally see [this list of static analysis tools](https://github.com/analy
 <!-- ------------------------------------------------------------------------------ -->
 
 
-## Configuration {.smaller}
+## Exercise 3 {.smaller}
 
-The default set of linting rules for ruff is quite simple.
-
-The ruleset to be applied can be configured in a `ruff.toml` file, as we do in this project,
-or `pyproject.toml` for packaged code.
-For full details see the [ruff configuration documentation](https://docs.astral.sh/ruff/configuration/).
-
-Details of the different rules and rulesets that can be selected can be found in the
-[ruff rules documentation](https://docs.astral.sh/ruff/rules/).
-
-
-<!-- ------------------------------------------------------------------------------ -->
-
-
-## Exercise 4 {.smaller}
-
-Go to exercise 4 and:
+Go to exercise 3 and:
 
 - run `ruff check` on `precipitation_climatology.py`
 - examine the report and try and address some of the issues.
   - Try and deal with: `F401` unused imports, `I001` unsorted imports,
     `B006` dangerous default, and `D202` Blank lines
-  - If you feel like it you could try and fix: `B904` try exceptions
-  - Ignore `D100`/`D103` missing docstrings and `PLR2004` magic values for now - we'll
-    come to them later.
-  - Unless you are really keen don't worry about: `PLR0913` Too many arguments
+  - For a challenge try and fix: `B904` try exceptions
 
 Extensions:
 
-- try and add linting to your preferred text editor or IDE
-- explore the configuration options for ruff
-- explore the option to supress ruff warnings
 - explore autofixes using the `--fix` flag
 - explore rules in development using the `--preview` flag
+- try and add linting to your preferred text editor or IDE
+
+<!-- ------------------------------------------------------------------------------ -->
+
+
+## Configuration {.smaller}
+
+The default set of linting rules for ruff is quite simple.
+
+The ruleset to be applied can be configured in a `ruff.toml` file, as we do in this project,
+or `pyproject.toml` for packaged code. \
+For full details see the [ruff configuration documentation](https://docs.astral.sh/ruff/configuration/).
+
+Details of the different rules and rulesets that can be selected can be found in the
+[ruff rules documentation](https://docs.astral.sh/ruff/rules/).
+
+\
+
+Let's take a look and make some changes in preparation for the next
+sections:
+
+- We will add the entire `"D"` (pydocstyle) ruleset.
+- We will stop ignoring:
+    - `"PLR2004"` (magic number comparisons) and
+    - `"E501"` (line length).
 
 <!-- ------------------------------------------------------------------------------ -->
